syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "utils.proto";
import "platform.proto";

package service;

option java_package = "ar.edu.itba.pod.server";
option java_outer_classname = "ServiceModel";
option java_multiple_files = true;

service TrainAdministrator {
  rpc RequestPlatform(TrainValue) returns (TrainResponseData);
  rpc OccupyPlatform(TrainAndPlatformValue) returns (TrainResponseData);
  rpc LeavePlatform(TrainAndPlatformValue) returns (TrainResponseData);
}

message TrainValue {
  Train train = 1;
}

message TrainAndPlatformValue {
  Train train = 1;
  Platform platform = 2;
}

message TrainResponseData {
  Train train = 1;
  Platform platform = 2;
  int32 trains_ahead = 3;
}

message Train {
  int32 id = 1;
  Size train_size = 2;
  int32 occupancy_number = 3;
  bool has_double_traction = 4;
  TrainState train_state = 5;
}